--- a/Option_expiration_v2.ipynb
+++ b/Option_expiration_v2.ipynb
@@ -277,8 +277,8 @@
     "                            send_text = \"At the money: \"\n",
     "                        outlook=Dispatch('Outlook.Application') #Opens outlook\n",
     "                        mail = outlook.CreateItem(0) #Creates the mail item\n",
-    "                        mail.SentOnBehalfOfName = 'ygao@one68global.com'\n",
-    "                        mail.To='N.Oh@one68global.com;lluo@one68global.com'\n",
+    "                        mail.SentOnBehalfOfName = '.com'\n",
+    "                        mail.To='.com;.com'\n",
     "                        mail.Subject = 'Options Expiry: {}'.format(option_name)\n",
     "                        mail.HTMLBody = (\"\"\"<br><br>Underlying Stock Price: ${}\n",
     "                                 <br><br>{} ${:.2f}\"\"\".format(last_price,send_text, dif))\n",
